--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -28,7 +28,7 @@
   position: relative;
   z-index: 8;
 
-  @media (--not-small) {
+  @media (min-width: 30em) {
     height: calc(var(--h3) + var(--h2));
   }
 }
@@ -61,7 +61,7 @@
     color: var(--grey-400);
   }
 
-  @media (--not-small) {
+  @media (min-width: 30em) {
     font-size: var(--f5);
   }
 }
