Finished basic style

--- a/src/components/CampaignDetails.module.css
+++ b/src/components/CampaignDetails.module.css
@@ -86,9 +86,8 @@
   }
 }
 
-.donations {
+.donationsWrapper {
   flex: 1;
-  background-color: red;
 
   @media (min-width: 40em) {
     margin: var(--p4);
