--- a/src/components/Campaign.module.css
+++ b/src/components/Campaign.module.css
@@ -1,6 +1,6 @@
 .campaign {
-  width: calc(100% - var(--p3));
-  margin: var(--p2);
+  width: calc(100% - var(--p4));
+  margin: var(--p3);
   max-width: 400px;
 
   background-color: white;
@@ -10,20 +10,19 @@
 
   @media (min-width: 40em) {
     max-width: 300px;
-    width: calc(50% - var(--p3));
+    width: calc(50% - var(--p4));
   }
 
   @media (min-width: 65em) {
-    width: calc(33.3% - var(--p3));
+    width: calc(33.3% - var(--p4));
   }
 }
 
 .header {
-  /* height: calc(var(--h4) + var(--h3)); */
   width: 100%;
   overflow-y: hidden;
   position: relative;
-  padding-top: 75%; /* 4:3 aspect ratio */
+  padding-top: 56.25%; /* 4:3 aspect ratio */
 
   & .cover {
     position: absolute;
@@ -34,11 +33,9 @@
 }
 
 .main {
-  padding: var(--p4);
-  padding-bottom: var(--p3);
+  padding: var(--p3);
 
   & h3 {
-    text-align: center;
     text-transform: uppercase;
     font-weight: 600;
     color: var(--red-800);
@@ -47,7 +44,6 @@
   }
 
   & p {
-    text-align: center;
     color: var(--grey-800);
     font-size: var(--f5);
     line-height: 1.2;
@@ -57,41 +53,48 @@
 .underline {
   border-bottom: 3px solid var(--grey-800);
   width: 100px;
-  margin: 0 auto;
   margin-bottom: var(--p4);
 }
 
 .footer {
-  padding: var(--p4);
-  padding-top: var(--p3);
+  padding: var(--p3);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  & .from {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
 
   & p {
     text-align: center;
     color: var(--grey-800);
-    font-size: var(--f4);
+    font-size: var(--f5);
     font-weight: 600;
-    margin-bottom: var(--p2);
+    margin-bottom: var(--p1);
   }
 
   & h4 {
     text-align: center;
     color: var(--red-800);
-    font-size: var(--f3);
+    font-size: var(--f4);
     font-weight: 600;
-    margin-bottom: var(--p4);
   }
 }
 
 .donateButton {
+  margin-left: var(--p3);
   display: block;
-  margin: 0 auto;
+  flex-grow: 0;
   background-color: var(--red-800);
   color: white;
   font-size: var(--f4);
   text-transform: uppercase;
   font-weight: 600;
   border: none;
-  padding: var(--p2) var(--p4);
+  padding: var(--p2) var(--p3);
 
   &:hover {
     background-color: var(--red-900);
