--- a/src/components/CampaignDetails.module.css
+++ b/src/components/CampaignDetails.module.css
@@ -53,7 +53,10 @@
 
   @media (min-width: 40em) {
     max-width: 400px;
-    margin: var(--p4);
+    margin-left: var(--p4);
+    margin-right: var(--p4);
+    margin-bottom: 0;
+    padding-top: var(--p4);
   }
 
   & .carousel {
