--- a/src/components/CampaignDetails.module.css
+++ b/src/components/CampaignDetails.module.css
@@ -1,13 +1,21 @@
 .details {
-  padding: var(--p5) var(--p4);
+  padding: var(--p5) var(--p3);
+
+  &.extraPadding {
+    padding-top: var(--p6);
+  }
 }
 
 .title {
-  font-size: var(--f1);
+  font-size: var(--f2);
   text-transform: uppercase;
   font-weight: 600;
   text-align: center;
   color: var(--red-800);
+
+  @media (min-width: 30em) {
+    font-size: var(--f1);
+  }
 }
 
 .featured {
@@ -40,7 +48,7 @@
   flex-direction: column;
   align-items: center;
 
-  @media (min-width: 40em) {
+  @media (min-width: 50em) {
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -50,13 +58,18 @@
 .carouselWrapper {
   margin-bottom: var(--p4);
   width: 100%;
+  max-width: 400px;
 
-  @media (min-width: 40em) {
-    max-width: 400px;
+  @media (min-width: 50em) {
+    max-width: 300px;
     margin-left: var(--p4);
     margin-right: var(--p4);
     margin-bottom: 0;
     padding-top: var(--p4);
+  }
+
+  @media (min-width: 70em) {
+    max-width: 400px;
   }
 
   & .carousel {
@@ -92,7 +105,7 @@
 .donationsWrapper {
   flex: 1;
 
-  @media (min-width: 40em) {
+  @media (min-width: 50em) {
     margin: var(--p4);
     max-width: 600px;
   }
