--- a/src/components/Campaign.module.css
+++ b/src/components/Campaign.module.css
@@ -94,8 +94,10 @@
   font-weight: 600;
   border: none;
   padding: var(--p2) var(--p3);
+  text-decoration: none;
 
   &:hover {
     background-color: var(--red-900);
+    cursor: pointer;
   }
 }
