--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -56,6 +56,7 @@
 .barItem {
   color: white;
   font-size: var(--f6);
+  text-decoration: none;
 
   &:hover {
     color: var(--grey-400);
@@ -67,10 +68,14 @@
 }
 
 .header.inverted {
-  background: rgb(0, 0, 0, 0);
+  background: var(--grey-200);
 
   @media (min-width: 30em) {
     padding: 0 var(--p3);
+  }
+
+  .logoWrap {
+    background-color: rgb(0, 0, 0, 0);
   }
 
   & .separator {
