--- a/src/components/Donation.module.css
+++ b/src/components/Donation.module.css
@@ -1,29 +1,45 @@
 .donation {
   box-shadow: var(--shadow-4);
+  display: flex;
   background-color: var(--grey-100);
   margin-bottom: var(--p3);
-  padding: var(--p3);
 }
 
-.donationDetails {
-  margin-bottom: var(--p3);
+.imageSlot {
+  background-color: white;
+  height: 150px;
+  width: 150px;
+  overflow: hidden;
+
+  & img {
+    height: 100%;
+  }
+}
+
+.donationInfo {
+  flex-grow: 1;
+  padding: var(--p3);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   & h4 {
+    margin-bottom: var(--p3);
     font-size: var(--f4);
     font-weight: 600;
     color: var(--grey-800);
     margin-bottom: var(--p2);
-  }
 
-  & p {
-    font-size: var(--f6);
-    color: var(--grey-600);
-    line-height: 1.2;
+    @media (min-width: 40em) {
+      font-size: var(--f3);
+    }
   }
 }
 
 .donationAction {
+  width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: flex-end;
   align-items: center;
 
@@ -32,7 +48,7 @@
     font-weight: 600;
     color: var(--red-800);
     text-align: center;
-    margin-right: var(--p3);
+    margin-bottom: var(--p2);
   }
 
   & button {
@@ -47,6 +63,15 @@
 
     &:hover {
       background-color: var(--red-900);
+    }
+  }
+
+  @media (min-width: 40em) {
+    flex-direction: row;
+
+    & h5 {
+      margin-right: var(--p3);
+      margin-bottom: 0;
     }
   }
 }
