--- a/src/components/Campaign.module.css
+++ b/src/components/Campaign.module.css
@@ -33,6 +33,7 @@
 
 .main {
   padding: var(--p3);
+  padding-bottom: var(--p4);
 
   & h3 {
     text-transform: uppercase;
@@ -57,6 +58,7 @@
 
 .footer {
   padding: var(--p3);
+  padding-top: var(--p4);
   display: flex;
   justify-content: flex-end;
   align-items: center;
