--- a/src/components/BasketItem.module.css
+++ b/src/components/BasketItem.module.css
@@ -60,17 +60,25 @@
   align-items: center;
 
   & button {
-    display: block;
-    background-color: var(--red-800);
-    color: white;
-    font-size: var(--f5);
-    text-transform: uppercase;
-    font-weight: 600;
-    border: none;
-    padding: var(--p2) var(--p4);
+    border: 0;
+    background-color: var(--grey-400);
+    color: var(--red-800);
+    font-size: var(--f6);
+    padding: var(--p2) var(--p3);
+    border-radius: var(--br3);
 
     &:hover {
-      background-color: var(--red-900);
+      background-color: var(--grey-500);
     }
+  }
+
+  & span {
+    background-color: white;
+    font-size: var(--f4);
+    font-weight: 600;
+    color: var(--grey-800);
+    padding: var(--p2) var(--p3);
+    border-radius: var(--br3);
+    margin: 0 var(--p2);
   }
 }
