--- a/src/components/AltHeader.module.css
+++ b/src/components/AltHeader.module.css
@@ -5,9 +5,9 @@
   background-position: center;
   height: 200px;
 
-  @media (min-width: 60em) {
+  @media (min-width: 40em) {
     height: 150px;
-    background-size: 20%;
+    background-size: 40%;
     background-repeat: repeat-x;
   }
 }
@@ -32,8 +32,8 @@
 }
 
 .call {
-  display: none;
   font-size: var(--f3);
+  display: none;
   text-transform: uppercase;
   font-weight: 600;
   color: var(--grey-300);
@@ -43,8 +43,14 @@
     color: var(--red-600);
   }
 
-  @media (min-width: 60em) {
+  @media (min-width: 40em) {
     display: block;
+    max-width: 250px;
+    line-height: 1.2;
+  }
+
+  @media (min-width: 60em) {
+    max-width: 1000px;
   }
 }
 
@@ -54,7 +60,7 @@
   padding-top: var(--p3);
   margin-left: 0;
 
-  @media (min-width: 60em) {
+  @media (min-width: 40em) {
     display: none;
   }
 }
@@ -70,7 +76,7 @@
   position: relative;
   z-index: 8;
 
-  @media (min-width: 60em) {
+  @media (min-width: 40em) {
     height: calc(var(--h3) + var(--h2));
   }
 }
@@ -112,7 +118,7 @@
     color: var(--grey-400);
   }
 
-  @media (min-width: 60em) {
+  @media (min-width: 40em) {
     font-size: var(--f5);
   }
 }
