--- a/src/components/layout/AltHeader.module.css
+++ b/src/components/layout/AltHeader.module.css
@@ -1,5 +1,5 @@
 .header {
-  background-image: url(../assets/hero-back.png);
+  background-image: url(../../assets/hero-back.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
