--- a/src/components/campaigns/Campaign.module.css
+++ b/src/components/campaigns/Campaign.module.css
@@ -1,6 +1,6 @@
 .campaign {
-  width: calc(100% - var(--p4));
-  margin: var(--p3);
+  width: 100%;
+  margin: var(--p3) 0;
   max-width: 400px;
 
   background-color: white;
@@ -8,6 +8,7 @@
   border-radius: var(--br4);
 
   @media (min-width: 40em) {
+    margin: var(--p3);
     max-width: 300px;
     width: calc(50% - var(--p4));
   }
@@ -34,6 +35,10 @@
 .main {
   padding: var(--p3);
   padding-bottom: var(--p4);
+
+  & a {
+    text-decoration: none;
+  }
 
   & h3 {
     text-transform: uppercase;
