--- a/src/components/checkout/PixPoller.module.css
+++ b/src/components/checkout/PixPoller.module.css
@@ -1,9 +1,15 @@
-.paragraph {
+.poller {
+  margin-top: var(--p4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text {
   font-size: var(--f6);
-  text-align: center;
   color: var(--grey-600);
-  margin-top: var(--p3);
   line-height: 1.3;
+  margin-left: var(--p2);
 }
 
 .action {
