--- a/src/components/layout/Footer.module.css
+++ b/src/components/layout/Footer.module.css
@@ -1,20 +1,31 @@
 .footer {
-  height: 8em;
   background-color: var(--grey-800);
   color: white;
   padding: var(--p3);
   box-sizing: border-box;
+
+  @media (min-width: 40em) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .information {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-
   @media (min-width: 40em) {
+    display: flex;
+    align-items: center;
     justify-content: start;
   }
+}
+
+.flexBlock {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.right {
+  margin-right: var(--p4);
 }
 
 .logo {
@@ -27,9 +38,23 @@
   margin-top: var(--p2);
   font-size: var(--f7);
   line-height: 1.3;
+
+  @media (min-width: 40em) {
+    margin-right: var(--p5);
+  }
 }
 
-.text .main {
+.bankData {
+  margin-top: var(--p4);
+  font-size: var(--f7);
+  line-height: 1.3;
+
+  @media (min-width: 40em) {
+    margin-top: var(--p2);
+  }
+}
+
+.main {
   font-weight: 600;
   margin-bottom: var(--p2);
 }
