--- a/src/components/checkout/PixCheckout.module.css
+++ b/src/components/checkout/PixCheckout.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-wrap: wrap;
 
   @media (min-width: 40em) {
     flex-direction: row;
@@ -26,4 +27,12 @@
 
 .innerWrapper {
   width: 100%;
+}
+
+.tip {
+  width: 100%;
+  flex-shrink: 0;
+  @media (min-width: 40em) {
+    display: none;
+  }
 }
