--- a/src/components/checkout/PixCopyPaste.module.css
+++ b/src/components/checkout/PixCopyPaste.module.css
@@ -24,3 +24,38 @@
     background-color: var(--red-300);
   }
 }
+
+.codeBox {
+  margin-top: var(--p1);
+  box-sizing: border-box;
+  width: 100%;
+  background-color: var(--red-400);
+  padding: var(--p2);
+
+  span {
+    display: inline-block;
+    font-size: var(--f6);
+    color: white;
+    font-weight: 600;
+    margin-bottom: var(--p2);
+  }
+
+  textarea {
+    background-color: var(--grey-100);
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    padding: var(--p1);
+    font-size: var(--f7);
+    font-weight: 400;
+    line-height: 1.2;
+    color: var(--grey-900);
+    border: none;
+    height: 110px;
+    resize: none;
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
