--- a/src/components/basket/BasketItem.module.css
+++ b/src/components/basket/BasketItem.module.css
@@ -6,14 +6,16 @@
   margin-bottom: var(--p3);
 
   & .imageSlot {
-    background-color: var(--grey-100);
-    height: 130px;
-    width: 130px;
+    height: 120px;
+    width: 120px;
     overflow: hidden;
+    padding: var(--p1);
+    flex-shrink: 0;
   }
 
   & img {
     height: 100%;
+    border-radius: calc((var(--br3) + var(--br4)) / 2);
   }
 }
 
