--- a/src/components/checkout/CheckoutInput.module.css
+++ b/src/components/checkout/CheckoutInput.module.css
@@ -1,7 +1,7 @@
 .input {
-  width: 100%;
   display: block;
   box-sizing: border-box;
+  width: 100%;
   height: 2.5em;
   padding: var(--p2) var(--p2);
   font-size: var(--f5);
@@ -17,13 +17,19 @@
     border: 2px solid var(--grey-800);
   }
 
-  &.invalid {
+  &.blankInput {
     border-color: var(--red-800);
+    padding-left: var(--p4);
   }
 }
 
-.errorText {
-  margin-top: var(--p1);
+.inputWrap {
+  position: relative;
+}
+
+.icon {
+  position: absolute;
+  top: calc(var(--p2) + var(--p1));
+  left: calc(var(--p2) + var(--p1));
   color: var(--red-800);
-  font-size: var(--f6);
 }
