--- a/src/components/checkout/CheckoutInputMask.module.css
+++ b/src/components/checkout/CheckoutInputMask.module.css
@@ -1,29 +1,5 @@
-.cardWrap {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: var(--p3);
-  row-gap: var(--p3);
-  align-items: center;
-
-  & > * {
-    grid-column-end: span 2;
-
-    @media (min-width: 40em) {
-      grid-column-end: span 1;
-    }
-  }
-}
-
-.formWrap {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: var(--p3);
-  row-gap: var(--p3);
-}
-
 .input {
   display: block;
-  grid-column-end: span 2;
   box-sizing: border-box;
   width: 100%;
   height: 2.5em;
@@ -41,11 +17,23 @@
     border: 2px solid var(--grey-800);
   }
 
-  &.halfInput {
+  @media (min-width: 40em) {
     grid-column-end: span 1;
   }
 
   &.blankInput {
     border-color: var(--red-800);
+    padding-left: var(--p4);
   }
+}
+
+.inputWrap {
+  position: relative;
+}
+
+.icon {
+  position: absolute;
+  top: calc(var(--p2) + var(--p1));
+  left: calc(var(--p2) + var(--p1));
+  color: var(--red-800);
 }
