--- a/src/components/checkout/PersonalData.module.css
+++ b/src/components/checkout/PersonalData.module.css
@@ -1,3 +1,13 @@
+.main {
+  padding: var(--p4) var(--p3);
+  box-sizing: border-box;
+
+  @media (min-width: 40em) {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+}
+
 .title {
   font-size: var(--f3);
   font-weight: 600;
@@ -16,33 +26,17 @@
   grid-template-columns: 1fr 1fr;
   column-gap: var(--p3);
   row-gap: var(--p3);
+  margin-bottom: var(--p4);
+}
+
+.buttons {
+  margin-top: var(--p4);
 }
 
 .input {
-  display: block;
   grid-column-end: span 2;
-  box-sizing: border-box;
-  width: 100%;
-  height: 2.5em;
-  padding: var(--p2) var(--p2);
-  font-size: var(--f5);
-  font-weight: 400;
-  line-height: 1.5;
-  color: var(--grey-900);
-  border: 2px solid var(--grey-300);
-  border-radius: var(--br3);
-
-  &:focus {
-    border-radius: var(--br3);
-    outline: none;
-    border: 2px solid var(--grey-800);
-  }
 
   @media (min-width: 40em) {
     grid-column-end: span 1;
-  }
-
-  &.blankInput {
-    border-color: var(--red-800);
   }
 }
