--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,21 @@
 body {
   font-family: "Open Sans", Helvetica, sans-serif;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
-@media(max-width: 350px) {
+html {
+  height: -webkit-fill-available;
+}
+
+#root {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+  min-height: --webkit-fill-available;
+}
+
+@media (max-width: 350px) {
   html {
     font-size: 14px;
   }
