--- a/components/layout/Hero.module.css
+++ b/components/layout/Hero.module.css
@@ -1,5 +1,5 @@
 .hero {
-  /* background-image: url(../../assets/hero-back.png); */
+  background-image: url(/hero-back.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
